--- a/cektamsis/package.json
+++ b/cektamsis/package.json
@@ -41,6 +41,7 @@
         "typescript": "^5.2.2",
         "vite": "^7.0.4",
         "vue": "^3.5.13",
+        "vue-qrcode-reader": "^5.7.3",
         "vue-router": "^4.5.1",
         "ziggy-js": "^2.4.2"
     },
