--- a/cektamsis/package.json
+++ b/cektamsis/package.json
@@ -34,6 +34,7 @@
         "jspdf-autotable": "^5.0.2",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
+        "qrcode": "^1.5.4",
         "reka-ui": "^2.2.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
